source branch - Fix for animation glitch when loading page from menu on mobile

--- a/_sass/3-modules/_header.scss
+++ b/_sass/3-modules/_header.scss
@@ -127,6 +127,7 @@ use.main-nav__menu {
 
     &.hidden {
       transition: 300ms ease-in-out; 
+      transition-delay: 110ms; // fixes animation glitch where previous page flashes before loading new page
       visibility: hidden;
       opacity: 0;
     }
